--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 hibernate.hbm2ddl.auto=update
 hibernate.characterEncoding=UTF-8
-#hibernate.show_sql=false
-#hibernate.format_sql=true
+hibernate.show_sql=false
+hibernate.format_sql=true
